<resources>
    <string name="app_name">ErkinbekovBilimDz3_Month6</string>
    <string name="playlist">playlist</string>
    <string name="title">title</string>
    <string name="time">time</string>
    <string name="video">video</string>
    <string name="test_text">Make a Life Changing Difference in a Child’s Life</string>
    <string name="video_int">9 video</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="timer_test">04:14</string>
    <string name="back">Back</string>
    <string name="playlist_detail">Playlist</string>
    <string name="test_text1">Emotional Well-being Healing Practices for Children</string>
    <string name="test_text2">In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey.</string>
    <string name="video_series">32 video series</string>
    <string name="text_test4">HOW DISPLACEMENT INSTABILITY UNCERTAINTY AFFECT ...</string>
    <string name="adas">adas</string>
    <string name="download">Download</string>
    <string name="text_test5">Refugee children often have suffered many losses and because of that, they are grieving these losses they\'re grieving the loss of their home, the loss of the life they knew, the places where they were used to be and that they loved to go. The loss of their friends, and certainly the loss of their family members and loved ones. So naturally they\'re going to have sadness.</string>
    <string name="text_test6"><![CDATA[HOW DISPLACEMENT INSTABILITY & UNCERTAINTY AFFECT CHILDREN]]></string>
    <string name="select_video_quality">Select video quality</string>
    <string name="_480p">480p</string>
    <string name="_1080p">1080p</string>
    <string name="_720p">720p</string>
</resources>