<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.videoPlayer.VideoPlayerActivity">


    <LinearLayout
        android:id="@+id/llMainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/back"
                android:textColor="@color/teal_700"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_arrow" />

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/playlist_detail"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">
            <WebView
                android:id="@+id/webViewPreview"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvVideoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="24dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/text_test6"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/button_outline"
                    android:backgroundTint="@color/white"
                    android:drawableEnd="@drawable/ic_download"
                    android:paddingHorizontal="19dp"
                    android:paddingVertical="1dp"
                    android:text="@string/download"
                    android:textAllCaps="false"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="11dp"
                    android:text="@string/text_test5"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNoInternet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <include
            layout="@layout/check_internet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>