<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_preview"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:src="@drawable/img_test"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_playlist"
                android:layout_width="120dp"
                android:layout_height="24dp"
                android:background="@drawable/text_backround"
                android:paddingStart="54dp"
                android:paddingTop="2dp"
                android:text="@string/playlist"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/img_preview"
                app:layout_constraintEnd_toEndOf="@id/img_preview"
                app:layout_constraintStart_toStartOf="@id/img_preview" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_video_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/test_text"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_count_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_video_title"
        app:layout_constraintTop_toBottomOf="@id/tv_video_title"
        android:text="@string/video_int"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>