<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detailPlaylist.DetailPlaylistActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:id="@+id/clCardView">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/playlist_detail"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:cardBackgroundColor="#EDEDED"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar">

        <TextView
            android:id="@+id/tvVideoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/test_text1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="85dp"
            android:layout_marginBottom="25dp"
            android:text="@string/test_text2"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:text="adas"
        android:id="@+id/btnPlay"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        app:icon="@drawable/ic_play_arrow"
        android:layout_margin="16dp"
        app:cornerRadius="200dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/tvCountVideoDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_int"
        android:layout_marginStart="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlaylistDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="300dp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_detail_playlist" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:progressTint="@color/teal_700"
        android:indeterminateTint="@color/teal_700"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNoInternet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <include
            layout="@layout/check_internet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>